Fix layout: align table title and actions

--- a/app/assets/stylesheets/_tables.scss
+++ b/app/assets/stylesheets/_tables.scss
@@ -25,7 +25,7 @@
         font-size: 120%;
         font-weight: bold;
         color: $black;
-        vertical-align: baseline;
+        vertical-align: middle;
         display: inline-block;
         margin-right: 10px;
         text-transform:none;
@@ -33,7 +33,7 @@
 
       .table-actions {
         display: inline-block;
-        vertical-align: baseline;
+        vertical-align: middle;
       }
 
       a {
